--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.box {
+  background: blue;
+  width: 300px;
+  height: 300px;
+  display: inline-block;
+  color: white;
+}
+
+.box:nth-child(2) {
+  margin-left: 35px;
+}
+
+.box:nth-child(3) {
+  margin-left: 20px;
+}
