--- a/src/App.css
+++ b/src/App.css
@@ -37,18 +37,18 @@
   }
 }
 
+.father {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .box {
-  background: blue;
-  width: 300px;
-  height: 300px;
-  display: inline-block;
+  flex-basis: 30%;
+  background: peru;
   color: white;
-}
-
-.box:nth-child(2) {
-  margin-left: 35px;
-}
-
-.box:nth-child(3) {
-  margin-left: 20px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
